Edit Scroll Down Button
Scroll Down Button

--- a/puppiesbootstrap.css
+++ b/puppiesbootstrap.css
@@ -241,3 +241,9 @@ img {
     .PuppyInfoPhoto {
         margin-left:260px;
     }}
+
+#ScrollDown {
+    width:86px;
+    height:34px;
+    margin:0;
+}
